Remove one term, str_browser uses QListWidget methods.

--- a/src/widgets/qtdesigner/QTermDisplay.ui
+++ b/src/widgets/qtdesigner/QTermDisplay.ui
@@ -49,6 +49,11 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="font">
+      <font>
+       <family>Monospace</family>
+      </font>
+     </property>
      <property name="url">
       <url>
        <string>about:blank</string>
