--- a/src/widgets/qtdesigner/QStrBrowser.ui
+++ b/src/widgets/qtdesigner/QStrBrowser.ui
@@ -44,6 +44,9 @@
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Filter out terms by writing here&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="text">
+      <string/>
+     </property>
+     <property name="placeholderText">
       <string>Filter</string>
      </property>
     </widget>
