--- a/src/widgets/qtdesigner/QStrBrowser.ui
+++ b/src/widgets/qtdesigner/QStrBrowser.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>166</width>
-    <height>210</height>
+    <height>357</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -32,6 +32,21 @@
    <string>Term list</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QGroupBox" name="str_box">
      <property name="title">
