copy, paste, undo, redo

--- a/src/widgets/qtdesigner/QTermLinks.ui
+++ b/src/widgets/qtdesigner/QTermLinks.ui
@@ -236,8 +236,11 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="locale">
+             <locale language="English" country="UnitedKingdom"/>
+            </property>
             <property name="text">
-             <string>&amp;Add a files</string>
+             <string>&amp;Add files</string>
             </property>
            </widget>
           </item>
