--- a/src/widgets/qtdesigner/QStrChooser.ui
+++ b/src/widgets/qtdesigner/QStrChooser.ui
@@ -51,7 +51,14 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="QLabel" name="label"/>
+       <widget class="QLabel" name="label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="lineEdit">
