Can't save on rename fix + test. Various small changes.

--- a/src/widgets/qtdesigner/QTermEditor.ui
+++ b/src/widgets/qtdesigner/QTermEditor.ui
@@ -76,7 +76,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Oxygen Mono</family>
+          <family>Monospace</family>
          </font>
         </property>
         <property name="sizeAdjustPolicy">
